--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve --port=4222",
     "build-dev": "ng build -c development",
-    "build-production":"ng build -c production",
+    "build-production": "ng build -c production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "serve:ssr:ms-task-manager-frontend": "node dist/ms-task-manager-frontend/server/server.mjs"
@@ -21,6 +21,7 @@
     "@angular/platform-server": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@angular/ssr": "^19.2.19",
+    "bootstrap": "^5.3.8",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -40,5 +41,9 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.7.2"
-  }
+  },
+  "description": "This project was generated using [Angular CLI](https://github.com/angular/angular-cli) version 19.2.19.",
+  "main": "index.js",
+  "author": "",
+  "license": "ISC"
 }
